--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 asgiref==3.8.1
 Django==5.1.4
+django-stubs-ext==5.1.1
+django-types==0.20.0
+Faker==33.3.0
+greenlet==3.1.1
+model-bakery==1.20.0
+peewee==3.17.8
+python-dateutil==2.9.0.post0
+six==1.17.0
+SQLAlchemy==2.0.36
 sqlparse==0.5.3
+types-psycopg2==2.9.21.20241019
+typing_extensions==4.12.2
